chore(jenkins): Working version with failing tests.
related to #CAM-2413

--- a/.gitignore
+++ b/.gitignore
@@ -19,9 +19,15 @@ bin/*
 .kitchen/
 .kitchen.local.yml
 
+.chef/knife.local.rb
+
 # IDEs
 *.iml
 .idea
 
 # OS
 .DS_Store
+
+# Secure files and folders
+*.secure
+.secure/*
